# ocean-model-skill-assessor

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  Dockerfile  LICENSE  LICENSE.txt  README.md  codecov.yml  entrypoint.sh  environment.yml  pyproject.toml  requirements-dev.txt  setup.cfg  setup.py
.github/workflows/: linting.yaml  release.yaml  test.yaml
ci/: environment-py3.10-win.yml  environment-py3.10.yml  environment-py3.11-win.yml  environment-py3.11.yml  environment-py3.12-win.yml  environment-py3.12.yml  environment-py3.7.yml  environment-py3.8.yml  environment-py3.9-win.yml  environment-py3.9.yml
docs/: Demo-AK.ipynb  Demo-AK.md  Demo-CA.ipynb  Demo.ipynb  add_vocab.md  api.rst  cli.md  cli_tutorial.md  conf.py  create_vocabs.html  create_vocabs.ipynb  create_vocabs.md  create_vocabs_wrapper.md  datasets.md  demo.ipynb  demo.md  demo_cli.ipynb  demo_cli.md  demo_erddap.md  demo_erddap_cli.md  developer.md  environment.yml  index.rst  prototype.ipynb  vocab_widget.html  vocab_widget.ipynb  whats_new.md
docs/examples/: ciofs.ipynb  ciofs.md  gom_hycom.ipynb  gom_hycom.md  index.rst  tbofs.ipynb  tbofs.md
model_assessor/: __init__.py
notebooks/: Demo_workflows.ipynb  Demo_workflows_aoos.ipynb  Demo_workflows_aoos_tests.ipynb  PET0.ESMF_LogFile  config_local.yaml  config_nonlocal.yaml  config_nonlocal_region.yaml  prototype.ipynb
ocean_model_skill_assessor/: CLI.py  __init__.py  accessor.py  featuretype.py  main.py  paths.py  stats.py  utils.py
ocean_model_skill_assessor/plot/: __init__.py  line.py  map.py  quiver.py  scatter.py  surface.py  time_series.py
ocean_model_skill_assessor/tests/: test_plot.py  test_stats.py
ocean_model_skill_assessor/vocab/: erddap_coastwatch.json  erddap_ioos.json  general.json  standard_names.json  vocab_labels.json
skill_assessor/: stats.py
skill_assessor/plot/: time_series.py
skill_assessor/tests/: test_plot.py  test_stats.py
tests/: make_test_datasets.py  test_datasets.py  test_main.py  test_main_axds.py  test_main_erddap.py  test_main_local.py  test_plot.py  test_stats.py  test_utils.py
tests/test_results/model_output/: grid_grid_temp.nc  timeSeries_timeSeries_temp.nc
tests/test_results/processed/: grid_grid_temp_data.nc  grid_grid_temp_model.nc  profile_profile_temp_data.csv  profile_profile_temp_model.nc  timeSeriesProfile_timeSeriesProfile_temp_data.nc  timeSeriesProfile_timeSeriesProfile_temp_model.nc  timeSeries_timeSeries_ssh_model.nc  timeSeries_timeSeries_temp_data.csv  timeSeries_timeSeries_temp_model.nc  trajectoryProfile_trajectoryProfile_salt_data.csv  trajectoryProfile_trajectoryProfile_salt_model.nc
