[project]
name = "ocean-model-skill-assessor"
python_requires = ">=3.6"

[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]

[tool.setuptools]
packages = ["ocean-model-skill-assessor"]

[tool.interrogate]
ignore-init-method = true
ignore-init-module = false
ignore-magic = false
ignore-semiprivate = true
ignore-private = true
ignore-property-decorators = true
ignore-module = false
fail-under = 95
exclude = ["setup.py", "docs", "tests"]
verbose = 1
quiet = false
color = true

[tool.isort]
known_third_party = ["cartopy", "cf_xarray", "extract_model", "intake", "intake-axds", "intake-erddap", "matplotlib", "numpy", "ocean_data_gateway", "pandas", "pkg_resources", "setuptools", "xarray", "yaml"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-v"
# only test the root level, otherwise it picks up the tests of the project template
testpaths = [
    "tests",
]
