[sdist]
formats = gztar

[check-manifest]
ignore =
    *.yml
    *.yaml
    .coveragerc
    docs
    docs/*
    *.enc
    notebooks
    notebooks/*
    tests
    tests/*

[flake8]
max-line-length = 120
select = C,E,F,W,B,B950
ignore = E203, E501, W503
exclude = model_assessor/_version.py

[tool:pytest]
flake8-max-line-length = 120

[metadata]
name = ocean-model-skill-assessor
description = A package to fully run the comparison between data and model to assess model skill.
author = Axiom Data Science
url = https://github.com/axiom-data-science/ocean-model-skill-assessor
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_file = LICENSE.txt

## These need to be filled in by the author!
# For details see: https://pypi.org/classifiers/

classifiers =
    Development Status :: 5 - Production/Stable
    Topic :: Scientific/Engineering
    Intended Audience :: Science/Research
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    # Dont change this one
    License :: OSI Approved :: MIT License

## Add your email here
author_email = AUTHOR@EMAIL.COM


[aliases]
test = pytest

### make sure to fill in your dependencies!
[options]
include_package_data = True
install_requires =
    cartopy
    cf_pandas
    extract_model
    intake
    intake-axds
    intake-erddap
    intake-xarray
    matplotlib
    numpy
    ocean_data_gateway >= 0.6.0
    pandas
    requests
    scipy
    xarray
setup_requires=
    setuptools_scm
python_requires = >=3.6
################ Up until here

[options.package_data]
# Include any *.json files found in the "ocean_model_skill_assessor.vocab" package:
ocean_model_skill_assessor.vocab = *.json

zip_safe = False
packages = find:
