[sdist]
formats = gztar

[check-manifest]
ignore =
    *.yml
    *.yaml
    .coveragerc
    docs
    docs/*
    *.enc
    notebooks
    notebooks/*
    tests
    tests/*

[flake8]
max-line-length = 120
select = C,E,F,W,B,B950
ignore = E203, E501, W503
exclude = model_assessor/_version.py

[tool:pytest]
flake8-max-line-length = 120

[metadata]
name = ocean-model-skill-assessor
description = A package to fully run the comparison between data and model to assess model skill.
author = Axiom Data Science
url = https://github.com/axiom-data-science/ocean-model-skill-assessor
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_files = LICENSE.txt

## These need to be filled in by the author!
# For details see: https://pypi.org/classifiers/

classifiers =
    Development Status :: 5 - Production/Stable
    Topic :: Scientific/Engineering
    Intended Audience :: Science/Research
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    # Dont change this one
    License :: OSI Approved :: MIT License

## Add your email here
author_email = kristen@axds.co


[aliases]
test = pytest

### make sure to fill in your dependencies!
[options]
include_package_data = True
install_requires =
    aiohttp == 3.8.3
    alphashape == 1.3.1
    cf_pandas == 0.5.2
    cf_xarray == 0.7.9
    extract_model == 1.1.4
    intake == 0.6.6
    intake-axds == 0.1.2
    intake-erddap == 0.2.4
    intake-xarray == 0.6.1
    matplotlib == 3.6.3
    numpy == 1.23.5
    pandas == 1.5.3
    requests == 2.28.2
    scipy == 1.10.0
    tqdm == 4.64.1
    xarray == 2023.1.0
setup_requires=
    setuptools_scm
python_requires = >= 3.8, <=3.11
################ Up until here

[options.package_data]
# Include any *.json files found in the "ocean_model_skill_assessor.vocab" package:
ocean_model_skill_assessor.vocab = *.json

zip_safe = False
packages = find:
